gcc/testsuite/algol68/compile/error-mode-stropping-10.a68
begin long long int j;
      j := "joo" { dg-error "char.*long long int" }
end
